# BC2411-Project

./: .gitattributes  00_Data_Preprocessing.ipynb  01_DataCleaning_EDA.ipynb  02_Scoring_MILP_Results.ipynb  03_Sensitivity_Analysis.ipynb  README.md  app.py  pyproject.toml  recruiter_portal_app.py  requirements.txt  resume_split.ipynb
.streamlit/: config.toml
data/: jobs_milp_sample.csv  redundancy_threshold_sweep.csv  resume_txt_combined.csv  resumes_full_cleaned.csv
outputs/: best_config.json  greedy_selected.csv  method_comparison.csv  milp_best_selected.csv  milp_case_jobs.csv  milp_case_pairs.csv  milp_job_diagnostics.csv  milp_pair_decisions_detailed.csv  milp_q_values.csv  milp_u_values.csv  milp_x_values.csv  milp_y_values.csv  scoreonly_selected.csv  sensitivity_budget.csv  sensitivity_exposure.csv  sensitivity_floor.csv  sensitivity_k.csv  sensitivity_scaling_pairs_vs_time.csv  sweep_results.csv
outputs_resume_project_v4/: coverage_summary_milp.csv  jobs_cleaned.csv  method_comparison.csv  pair_scores.csv  resumes_cleaned.csv  selected_pairs_greedy.csv  selected_pairs_milp.csv  selected_pairs_score_only.csv  sensitivity_analysis.csv  shortlist_summary_milp.csv
talentflow/: __init__.py  company.py  config.py  data.py  main.py  ui.py
talentflow/pages/: admin.py  candidate.py  company.py  job.py  login.py  scenario.py
