[project]
name = "bc2411-project"
version = "0.1.0"
description = "Resume-to-job shortlisting project using notebook analysis, scoring, and MILP optimisation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel==6.29.5",
    "matplotlib==3.9.2",
    "numpy==2.4.0",
    "pandas==2.2.3",
    "plotly>=5.18.0",
    "scikit-learn==1.5.2",
    "scipy>=1.11.0",
    "streamlit>=1.32,<1.40",
]

[project.optional-dependencies]
notebook = [
    "ipykernel==6.29.5",
    "jupyter>=1.1.1",
]
optimization = [
    "gurobipy",
]
embeddings = [
    "sentence-transformers",
]

[tool.uv]
package = false
